--- a/examples/simple.html
+++ b/examples/simple.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>mozimagerectpolyfill &mdash; -moz-image-rect polyfill</title>
+    <title>mozimagerectpolyfill: -moz-image-rect polyfill</title>
     <link type="text/css" href="simple.css" rel="stylesheet">
 </head>
 <body>
